syntax = "proto3";

package user;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "./;user";

service User {
  rpc UserDetail(UserDetailReq) returns (UserDetailResp);

  rpc Ping(PingReq) returns (PingResp) {
    option (google.api.http) = {
      get: "/ping"
      body: "*"
    };
  };

  rpc Hello(HelloReq) returns (HelloResp) {
    option (google.api.http) = {
      post: "/hello"
      body: "*"
    };
  }

  rpc Hehe(HeheReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/hehe"
      body: "*"
    };
  }
}

message UserDetailReq {
  string uid = 1;
}

message UserDetailResp {
  string name = 1;
  int32 age = 2;
}

message HeheReq {
  int32 age = 1;
}

message PingReq {
  string name = 1;
}

message PingResp {
  string reason = 1;
}

message HelloReq {
  string code = 1;
}

message HelloResp {
  string msg = 1;
}
